# guide-counter

./: Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: build_and_test.yml
comparison-data/: plot-comparison.R  read-counts.txt  runtimes.txt
metadata/: tko_essential_genes.txt  tko_nonessential_genes.txt
src/: guide.rs  io.rs  main.rs
src/commands/: command.rs  count.rs  mod.rs
