[package]
name = "guide-counter"
version = "0.1.2"
edition = "2021"
authors = ["Tim Fennell"]
license = "MIT"
repository = "https://github.com/fulcrumgenomics/guide-counter"
homepage = "https://github.com/fulcrumgenomics/guide-counter"
description = "Fast and accurate guide counting for CRISPR screens."
readme = "README.md"
categories = ["science"]
keywords = ["bioinformatics", "genomic", "crispr"]

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
ahash = "0.7.6"
anyhow = "1.0.48"
clap = { version = "3.0.0-rc.9", features = ["derive"] }
csv = "1.1.5"
enum_dispatch = "0.3.7"
env_logger = "0.8.2"
fastq = "0.6.0"
flate2 = "1.0.22"
itertools = "0.10.1"
log = "0.4.14"
mimalloc = { version = "0.1.17", default-features = false }
regex = "1.5.4"
serde = { version = "1.0.123", features = ["derive"] }

[dev-dependencies]
tempfile = "3.2.0"
